vlib/v/checker/tests/struct_voidptr_field_init_err.out
vlib/v/checker/tests/struct_voidptr_field_init_err.vv:7:12: notice: voidptr variables may only be assigned voidptr values (e.g. unsafe { voidptr(get()) })
    5 | fn main() {
    6 |     println(Example{
    7 |         example: get()
      |                  ~~~~~
    8 |     })
    9 | }
vlib/v/checker/tests/struct_voidptr_field_init_err.vv:7:3: error: cannot assign to field `example`: expected a pointer `voidptr`, but got `string`
    5 | fn main() {
    6 |     println(Example{
    7 |         example: get()
      |         ~~~~~~~~~~~~~~
    8 |     })
    9 | }
